[package]
name = "be"
edition = "2024"

[dependencies]
bytes = "1.10.1"
camino = "1.2.0"
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
const-random = "0.1.18"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["display"] }
etcetera = "0.10.0"
num-format = "0.4.4"
petgraph = "0.8.2"
saphyr = "0.0.6"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-indicatif = "0.3.13"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tree-sitter = "0.25.10"
tree-sitter-haskell = "0.23.1"
twox-hash = { version = "2.1.2" }
which = "8.0.0"

[lints]
clippy.pedantic = { level = "warn", priority = -1 }
clippy.redundant_closure_for_method_calls = "allow"

[profile.profile]
inherits = "release"
debug = "full"
